--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -1,6 +1,10 @@
-mixin postInfo(item)
+mixin postInfo(item, showCate)
     .post-info
         != full_date(item.date, 'll')
+        if showCate && item.categories
+            span.categories <i class="fa fa-bookmark" aria-hidden="true"></i>
+            for category in item.categories.toArray()
+                a(class="post-category" href=url_for(category.path))= "#"+category.name
         if item.from && (is_home() || is_post())
             a.post-from(href=item.from target="_blank" title=item.from) 翻译 · 原文地址
 
@@ -13,7 +17,7 @@ mixin posts()
                     h2.post-title
                         a.post-title-link(href= url_for(item.path))
                             != item.title
-                    +postInfo(item)
+                    +postInfo(item, true)
                     .post-content
                         != item.excerpt
                     a.read-more(href= url_for(item.path))!= __('more')
@@ -31,7 +35,7 @@ mixin postList()
             if change 
                 h2.archive-year!= year
             .post-item
-                +postInfo(item)
+                +postInfo(item, false)
                 a.post-title-link(href= url_for(item.path))
                     != item.title
         - })
@@ -42,6 +46,10 @@ mixin post(item)
         article.post-block
             h1.post-title
                 != item.title
-            +postInfo(item)
+            +postInfo(item, true)
             .post-content
                 != item.content
+            if item.tags
+                p.post-tags <i class="fa fa-tags" aria-hidden="true"></i>
+                    for tag in item.tags.toArray()
+                        a(href=url_for(tag.path))=  '#' + tag.name
