--- a/layout/partial/nav.jade
+++ b/layout/partial/nav.jade
@@ -3,6 +3,11 @@ ul.nav.nav-list
         li.nav-list-item
             - var re = /^(http|https):\/\/*/gi;
             - var tar = re.test(value) ? "_blank" : "_self"
-            - var act = !re.test(value) && "/"+page.current_url === value
+            - var act = !re.test(value) && ("/"+page.path).toLowerCase().indexOf(value.toLowerCase()) >= 0
+            if value === "/" && page.path != "index.html"
+                - act = false
             a.nav-list-link(class={active: act} href=url_for(value) target=tar)
                 != key.toUpperCase()
+    li.nav-list-item
+        a.nav-list-link(class="search" href=url_for("search") target="_self") <i class="fa fa-search" aria-hidden="true"></i>
+
